2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-extensions-manager.c:

	Don't warn when reading a .xml when we previously read the
	.ephy-extension for this identifier. Allows .xml and .ephy-extension
	to co-exist in ~/.gnome2/epiphany/extensions.

2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c:

	Delay reloads when we get many change notifications in a short time.
	Fixes bug #319993.

2005-11-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:

	Add F5 as accel for reload.

2005-11-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/pdm-dialog.c:

	Set the model's sort column only after filling it. Vastly improves
	delay when opening the PDM dialogue when you have many cookies.

2005-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix the nsIPassword.h presence check.

2005-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Prettify CRL import dialogue. Fixes bug #321590.

2005-11-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:
	* data/glade/prefs-dialog.glade:
	* data/glade/print.glade:
	* src/pdm-dialog.c: (pdm_dialog_response_cb), (pdm_dialog_init):
	* src/prefs-dialog.c: (setup_add_language_dialog),
	(prefs_dialog_init):

	Don't put the prefs/pdm dialogue over all windows. Make the
	add-language dialogue modal to the prefs dialogue.

2005-11-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Mark message for translation. Patch by Guilherme de S. Pastore,
	fixes bug #319988.

2005-11-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:

	Fix for mozilla API change.

2005-11-12  Philip Langdale  <philipl@mail.utexas.edu>

	* data/ui/epiphany-ui.xml: Remove accelerator actions
	for extra keybindings.

	* src/ephy-lockdown.c: (update_window):
	Don't manipulate removed "FileSave" action.

	* src/ephy-toolbar.c