@@ -1,5 +1,14 @@
 2005-11-18  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphyContentPolicy.cpp:
+	* embed/ephy-embed-single.c:
+	* embed/ephy-embed-single.h:
+
+	Add chrome: and resource: to the safe list; otherwise
+	forms and scrollbars break. Fixes bug #316498.
+
+2005-11-18  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-extensions-manager.c:
 
 	Don't warn when reading a .xml when we previously read the
